# ames/setup.cfg

[metadata]
name = ames
version = 1.2.0
description = Automated Metadata Service: Manage metadata from different sources.
long_description = file: README.md
long_description_content_type = text/markdown
author = Thomas E Morrell, Robert Doiel, Elizabeth Won
author_email = tmorrell@caltech.edu, rsdoiel@caltech.edu
url = https://github.com/caltechlibrary/ames
download_url = https://github.com/caltechlibrary/ames/archive/v1.1.4.zip
license = BSD
license_file = LICENSE
keywords = GitHub, metadata, software
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests
    idutils
    progressbar2
    caltechdata_api>=1.0.0
    py_dataset==1.0.1
    pandas
    ArchivesSnake
    dimcli
include_package_data = True

[options.package_data]
ames = exec/**/*

[options.extras_require]
# Define optional dependencies here if needed

[options.entry_points]
# console_scripts =
#     ames=ames.__main__:main

[tool:pytest]
testpaths = tests
